--- a/index.html
+++ b/index.html
@@ -84,22 +84,38 @@
   </header>
 
   <main>
-    <div class="card-grid">
+      <div class="card-grid">
       <a href="video.html" class="card">
-        <h2>🎥 Video Evidence</h2>
-        <p>Watch the video where I present myself and speak in English.</p>
+        <h2>🎥 Cuestionario. GA1-240202501-AA1-EV01.</h2>
+        <p>This questionnaire is designed to assess your initial level of knowledge in the English language. Through basic questions related to vocabulary, comprehension, grammar, and everyday expressions, you will be able to identify where you currently stand and which areas you need to strengthen.
+          This is not a formal test, but rather a helpful tool to guide your learning process and ensure you start at the level that suits you best..</p>
       </a>
 
       <a href="audio.html" class="card">
-        <h2>🎧 Audio Evidence</h2>
+        <h2>🎧 Audio GA3-240202501-AA1-EV02 </h2>
         <p>Listen to my pronunciation and speaking skills through an audio presentation.</p>
       </a>
 
-      <a href="text.html" class="card">
-        <h2>📝 Text Evidence</h2>
-        <p>Read the texts I wrote in English, including essays and reflections.</p>
+       <a href="audio.html" class="card">
+        <h2>🎧 Audio GA3-240202501-AA2-EV02 </h2>
+        <p>Listen to my pronunciation and speaking skills through an audio presentation.</p>
       </a>
-    </div>
+
+      <a href="video.html" class="card">
+        <h2>🎥 Cuestionario. GA4-240202501-AA1-EV01.</h2>
+        <p>This assessment is designed to reinforce and test the correct use of the expressions “So do I” and “Neither do I” in English. These structures are essential for expressing agreement with positive or negative statements, and mastering them helps improve fluency and natural communication.
+          The quiz consists of 15 questions and has an estimated completion time of 45 minutes, with a total of 3 available attempts. This activity allows students to apply their knowledge in practical contexts, evaluating both grammar and the correct use of these expressions.
+      </a>
+
+      <a href="video.html" class="card">
+        <h2>🎥 Video Presentation GA1-240202501-AA1-EV02 </h2>
+        <p>Watch the video where I present myself and speak in English.</p>
+      </a>
+
+         <a href="video.html" class="card">
+        <h2>🎥 Evidence of the Mind map (Personal Learning Environment) PLE GA4-240202501-AA1-EV02 & Personal Blog GA4-240202501-AA1-EV03 </h2>
+        <p>Watch the video where I present myself and speak in English.</p>
+      </a>
   </main>
 
   <footer>
