--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
         <p>Watch the video where I present myself and speak in English.</p>
       </a>
 
-         <a href="video.html" class="card">
+      <a href="video.html" class="card">
         <h2>🎥 Evidence of the Mind map (Personal Learning Environment) PLE GA4-240202501-AA1-EV02 & Personal Blog GA4-240202501-AA1-EV03 </h2>
         <p>Watch the video where I present myself and speak in English.</p>
       </a>
+
+    </div>
   </main>
 
   <footer>
