--- a/index.html
+++ b/index.html
@@ -84,38 +84,44 @@
   </header>
 
   <main>
-      <div class="card-grid">
-      <a href="video.html" class="card">
-        <h2>🎥 Cuestionario. GA1-240202501-AA1-EV01.</h2>
-        <p>This questionnaire is designed to assess your initial level of knowledge in the English language. Through basic questions related to vocabulary, comprehension, grammar, and everyday expressions, you will be able to identify where you currently stand and which areas you need to strengthen.
-          This is not a formal test, but rather a helpful tool to guide your learning process and ensure you start at the level that suits you best..</p>
-      </a>
+      <main>
+  <div class="card-grid">
+    <!-- Cuestionarios -->
+    <a href="quiz1.html" class="card"><h2>📄 Cuestionario 1</h2><p>GA1-240202501-AA1-EV01</p></a>
+    <a href="quiz2.html" class="card"><h2>📄 Cuestionario 2</h2><p>GA2-240202501-AA1-EV01</p></a>
+    <a href="quiz3.html" class="card"><h2>📄 Cuestionario 3</h2><p>GA2-240202501-AA2-EV01</p></a>
+    <a href="quiz4.html" class="card"><h2>📄 Cuestionario 4</h2><p>GA3-240202501-AA1-EV01</p></a>
+    <a href="quiz5.html" class="card"><h2>📄 Cuestionario 5</h2><p>GA3-240202501-AA2-EV01</p></a>
+    <a href="quiz6.html" class="card"><h2>📄 Cuestionario 6</h2><p>GA4-240202501-AA1-EV01</p></a>
 
-      <a href="audio.html" class="card">
-        <h2>🎧 Audio GA3-240202501-AA1-EV02 </h2>
-        <p>Listen to my pronunciation and speaking skills through an audio presentation.</p>
-      </a>
+    <!-- Videos -->
+    <a href="video1.html" class="card"><h2>🎥 Video 1</h2><p>Entrevista Virtual - GA2-240202501-AA2-EV02</p></a>
+    <a href="video2.html" class="card"><h2>🎥 Video 2</h2><p>Etapas de una empresa - GA5-240202501-AA1-EV03</p></a>
 
-       <a href="audio.html" class="card">
-        <h2>🎧 Audio GA3-240202501-AA2-EV02 </h2>
-        <p>Listen to my pronunciation and speaking skills through an audio presentation.</p>
-      </a>
+    <!-- Audios -->
+    <a href="audio1.html" class="card"><h2>🎧 Audio 1</h2><p>GA3-240202501-AA1-EV02</p></a>
+    <a href="audio2.html" class="card"><h2>🎧 Audio 2</h2><p>GA3-240202501-AA2-EV02</p></a>
 
-      <a href="video.html" class="card">
-        <h2>🎥 Cuestionario. GA4-240202501-AA1-EV01.</h2>
-        <p>
+    <!-- Documentos / Ensayos -->
+    <a href="text1.html" class="card"><h2>📝 Crónica</h2><p>GA2-240202501-AA1-EV03</p></a>
+    <a href="text2.html" class="card"><h2>📝 Documento escrito</h2><p>GA2-240202501-AA2-EV03</p></a>
+    <a href="text3.html" class="card"><h2>📝 Ensayo</h2><p>GA5-240202501-AA1-EV02</p></a>
 
-      <a href="video.html" class="card">
-        <h2>🎥 Video Presentation GA1-240202501-AA1-EV02 </h2>
-        <p>Watch the video where I present myself and speak in English.</p>
-      </a>
+    <!-- Foros -->
+    <a href="foro1.html" class="card"><h2>💬 Foro 1</h2><p>GA3-240202501-AA1-EV03</p></a>
+    <a href="foro2.html" class="card"><h2>💬 Foro 2</h2><p>GA3-240202501-AA2-EV03</p></a>
 
-      <a href="video.html" class="card">
-        <h2>🎥 Evidence of the Mind map (Personal Learning Environment) PLE GA4-240202501-AA1-EV02 & Personal Blog GA4-240202501-AA1-EV03 </h2>
-        <p>Watch the video where I present myself and speak in English.</p>
-      </a>
+    <!-- Presentación -->
+    <a href="presentacion.html" class="card"><h2>🖥 Presentación</h2><p>GA2-240202501-AA2-EV02</p></a>
 
-    </div>
+    <!-- Mapa mental -->
+    <a href="mapa.html" class="card"><h2>🧠 Mapa Mental - PLE</h2><p>GA4-240202501-AA1-EV02</p></a>
+
+    <!-- Diagrama de flujo -->
+    <a href="flujo.html" class="card"><h2>🔁 Diagrama de Flujo</h2><p>GA5-240202501-AA1-EV01</p></a>
+  </div>
+</main>
+
   </main>
 
   <footer>
