--- a/quiz1.html
+++ b/quiz1.html
@@ -56,15 +56,20 @@
 </head>
 <body>
   <header>
-    <h1>Quiz 1</h1>
+    <h1>Cuestionario</h1>
     <p>Evidence Code: GA1-240202501-AA1-EV01</p>
   </header>
 
   <main>
-    <h2>Quiz Description</h2>
-    <p class="content-placeholder">This section will include the answers or summary of the first English quiz. You can replace this text with the actual content later.</p>
+     <h2>Quiz Description</h2>
+  <p class="content-placeholder">
+    This section includes the answers or summary of the first English quiz.
+  </p>
 
-    <a href="index.html" class="back-button">← Back to Home</a>
+  <h2>Evidence Screenshot</h2>
+  <img src="evidence-quiz1.png" alt="Screenshot of Quiz 1 Evidence" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin: 1rem 0;"/>
+
+  <a href="index.html" class="back-button">← Back to Home</a>
   </main>
 </body>
 </html>
