--- a/quiz1.html
+++ b/quiz1.html
@@ -67,7 +67,7 @@
   </p>
 
   <h2>Evidence Screenshot</h2>
-  <img src="/images/evidence-quiz1.png" alt="Screenshot of Quiz 1 Evidence" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin: 1rem 0;"/>
+  <img src="images/evidence-quiz1.png.png" alt="Screenshot of Quiz 1 Evidence" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin: 1rem 0;"/>
 
   <a href="index.html" class="back-button">← Back to Home</a>
   </main>
