--- a/video1.html
+++ b/video1.html
@@ -96,7 +96,7 @@
     </p>
 
    <video controls style="width: 100%; border-radius: 12px; box-shadow: 0 0 12px #00cfff;">
-    <source src="video/Most Used Tools in Software Development.mp4" " type="video/mp4">
+    <source src="video/Most Used Tools in Software Development.mp4"  type="video/mp4">
       Tu navegador no soporta la reproducción de video.
   </video>
   
