--- a/video1.html
+++ b/video1.html
@@ -95,10 +95,10 @@
       This video presents a virtual interview conducted in English as part of the evidence requirements. The objective was to apply communication skills in a simulated professional environment.
     </p>
 
-   <video controls style="width: 100%; border-radius: 12px; box-shadow: 0 0 12px #00cfff;">
-    <source src="video/Most Used Tools in Software Development.mp4"  type="video/mp4">
-      Tu navegador no soporta la reproducción de video.
-  </video>
+   <div class="video-container">
+    <iframe src="https://youtu.be/ZZU7YIboSJw?si=gf6Zclrx-iMAW_-E" frameborder="0" allowfullscreen></iframe>
+  </div>
+
   
     
 
