--- a/video1.html
+++ b/video1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Video Interview - GA2-240202501-AA2-EV02</title>
+  <title>Presentation - GA2-240202501-AA2-EV02</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -85,14 +85,14 @@
 <body>
 
   <header>
-    <h1>Video Interview</h1>
+    <h1>Presentation</h1>
     <p>Evidence Code: GA2-240202501-AA2-EV02</p>
   </header>
 
   <main>
     <h2>Description</h2>
     <p class="description">
-      This video presents a virtual interview conducted in English. It highlights the most used tools in software development, such as GitHub, Docker, Visual Studio Code, and Trello.
+      This video highlights the most commonly used tools in software development, such as GitHub, Docker, Visual Studio Code, and Trello.
     </p>
 
     <div class="video-container">
