--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <a href="quiz6.html" class="card"><h2>📄 Cuestionario 6</h2><p>GA4-240202501-AA1-EV01</p></a>
 
     <!-- Videos -->
-    <a href="video1.html" class="card"><h2>🎥 Video 1</h2><p>Entrevista Virtual - GA2-240202501-AA2-EV02</p></a>
+    <a href="video1.html" class="card"><h2>🎥 Video 1</h2><p>Presentation - GA2-240202501-AA2-EV02</p></a>
     <a href="video2.html" class="card"><h2>🎥 Video 2</h2><p>Etapas de una empresa - GA5-240202501-AA1-EV03</p></a>
 
     <!-- Audios -->
