--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <!-- Videos -->
     <a href="video1.html" class="card"><h2>🎥 Video 1</h2><p>Presentation - GA2-240202501-AA2-EV02</p></a>
-    <a href="video2.html" class="card"><h2>🎥 Video 2</h2><p>Etapas de una empresa - GA5-240202501-AA1-EV03</p></a>
+    <a href="video2.html" class="card"><h2>🎥 Video 2</h2><p>Virtual video interview - GA2-240202501-AA1-EV02</p></a>
 
     <!-- Audios -->
     <a href="audio1.html" class="card"><h2>🎧 Audio 1</h2><p>GA3-240202501-AA1-EV02</p></a>
