--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       width: 160px;
       height: 160px;
       transform: translate(-50%, -50%);
-      background-image: url('brain.svg'); /* Usa tu SVG aquí */
+      background-image: url('brain-svgrepo-com.svg'); /* Usa tu SVG aquí */
       background-size: cover;
       animation: pulse 2s infinite ease-in-out;
       z-index: 2;
