--- a/index.html
+++ b/index.html
@@ -3,33 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Evidence of the Mind map (Personal Learning Environment) PLE GA4-240202501-AA1-EV02 & Personal Blog GA4-240202501-AA1-EV03</title>
+  <title>Mind Map Blog - English Evidence</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: radial-gradient(ellipse at center, #0f2027, #203a43, #2c5364);
-      overflow: hidden;
-      color: #fff;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    #brain {
+    body {
+      background: radial-gradient(circle at center, #001f3f, #000);
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      overflow: hidden;
+    }
+
+    header {
+      text-align: center;
+      padding: 2rem;
+      background: rgba(0,0,0,0.5);
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      color: #00cfff;
+    }
+
+    .map-container {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    .brain {
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 160px;
-      height: 160px;
       transform: translate(-50%, -50%);
-      background-image: url('brain-svgrepo-com.svg'); /* Usa tu SVG aquí */
-      background-size: cover;
-      animation: pulse 2s infinite ease-in-out;
+      width: 180px;
+      height: 180px;
+      background: url('images/brain.png') no-repeat center/contain;
+      animation: pulse 3s infinite ease-in-out;
       z-index: 2;
     }
 
     @keyframes pulse {
-      0%, 100% { transform: translate(-50%, -50%) scale(1); }
-      50% { transform: translate(-50%, -50%) scale(1.1); }
+      0%, 100% {
+        transform: translate(-50%, -50%) scale(1);
+      }
+      50% {
+        transform: translate(-50%, -50%) scale(1.08);
+      }
     }
 
     .card {
@@ -37,52 +61,71 @@
       width: 180px;
       padding: 1rem;
       background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(10px);
       border: 2px solid #00cfff;
-      border-radius: 15px;
+      border-radius: 10px;
       text-align: center;
-      color: #fff;
+      color: #00cfff;
       text-decoration: none;
-      transition: transform 0.3s;
-      backdrop-filter: blur(8px);
-      box-shadow: 0 0 10px #00cfff77;
-      font-weight: bold;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 0 15px rgba(0, 207, 255, 0.3);
     }
 
     .card:hover {
-      transform: scale(1.1);
+      transform: scale(1.08);
+      box-shadow: 0 0 20px rgba(0, 207, 255, 0.6);
+    }
+
+    .card h2 {
+      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
     }
 
     svg {
       position: absolute;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       z-index: 1;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Mind Map: English Learning Evidences</h1>
+  </header>
 
-  <!-- SVG Brain Center -->
-  <div id="brain"></div>
+  <div class="map-container">
+    <svg>
+      <line x1="50%" y1="50%" x2="15%" y2="20%" stroke="#00cfff" stroke-width="2"/>
+      <line x1="50%" y1="50%" x2="85%" y2="20%" stroke="#00cfff" stroke-width="2"/>
+      <line x1="50%" y1="50%" x2="15%" y2="80%" stroke="#00cfff" stroke-width="2"/>
+      <line x1="50%" y1="50%" x2="85%" y2="80%" stroke="#00cfff" stroke-width="2"/>
+    </svg>
 
-  <!-- Evidence Cards (Positioned as Mindmap Nodes) -->
-  <a href="quiz1.html" class="card" style="top:10%; left:15%;">📄 Cuestionario 1</a>
-  <a href="video1.html" class="card" style="top:25%; left:75%;">🎥 Video 1</a>
-  <a href="audio1.html" class="card" style="top:75%; left:20%;">🎧 Audio 1</a>
-  <a href="quiz5.html" class="card" style="top:60%; left:80%;">📄 Cuestionario 5</a>
-  <a href="video2.html" class="card" style="top:35%; left:40%;">🎥 Video 2</a>
-  <a href="audio2.html" class="card" style="top:65%; left:50%;">🎧 Audio 2</a>
+    <div class="brain"></div>
 
-  <!-- SVG Lines from Brain to Cards -->
-  <svg id="connections">
-    <line x1="50%" y1="50%" x2="15%" y2="10%" stroke="#00cfff" stroke-width="2"/>
-    <line x1="50%" y1="50%" x2="75%" y2="25%" stroke="#00cfff" stroke-width="2"/>
-    <line x1="50%" y1="50%" x2="20%" y2="75%" stroke="#00cfff" stroke-width="2"/>
-    <line x1="50%" y1="50%" x2="80%" y2="60%" stroke="#00cfff" stroke-width="2"/>
-    <line x1="50%" y1="50%" x2="40%" y2="35%" stroke="#00cfff" stroke-width="2"/>
-    <line x1="50%" y1="50%" x2="50%" y2="65%" stroke="#00cfff" stroke-width="2"/>
-  </svg>
+    <!-- Cards -->
+    <a href="quiz1.html" class="card" style="top: 15%; left: 10%;">
+      <h2>📄 Quiz 1</h2>
+      <p>GA1-EV01</p>
+    </a>
 
+    <a href="video1.html" class="card" style="top: 15%; left: 80%;">
+      <h2>🎥 Video 1</h2>
+      <p>GA2-EV02</p>
+    </a>
+
+    <a href="audio1.html" class="card" style="top: 75%; left: 10%;">
+      <h2>🎧 Audio 1</h2>
+      <p>GA3-EV02</p>
+    </a>
+
+    <a href="video2.html" class="card" style="top: 75%; left: 80%;">
+      <h2>🎥 Video 2</h2>
+      <p>GA2-EV03</p>
+    </a>
+  </div>
 </body>
 </html>
